--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <!-- Meta tags for search engines -->
+  <meta name="description" content="Women++ Challenge: Creating Impact Tracker Software for Non-profits">
+  <meta name="keywords" content="women++, hack'n'lead, non-profits, impact tracker, diversity, Swiss tech industry">
+
+  <title>Women++ Impact Tracker Challenge | Hack'n'Lead</title>
+
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/473816287a.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
-  <section id="banner">Banner</section>
+  <header>
+    <h1>WomenPlusPlus Tracker</h1>
+  </header>
   <main>
     <nav class="navigation">
       <div class="each-nav">
