Add footer + styles

--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
     </nav>
     <section class="chart">Chart</section>
   </main>
-  <footer></footer>
+  <footer>@The Metrics Marvels</footer>
 </body>
 </html>
