--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
     <section class="chart">Chart</section>
   </main>
   <footer>@The Metrics Marvels</footer>
+  <script src="/script.js"></script>
 </body>
 </html>
