removed test divs and commented out the JS code to scroll till charts are created

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <script>
       function smoothScroll(idName) {
 
-        var scrollIntoViewOptions = {
-          block: "start",
-          inline: "nearest",
-          behavior: "smooth"
-        };
-        document.getElementById(idName).scrollIntoView(scrollIntoViewOptions);
+        // var scrollIntoViewOptions = {
+        //   block: "start",
+        //   inline: "nearest",
+        //   behavior: "smooth"
+        // };
+        // document.getElementById(idName).scrollIntoView(scrollIntoViewOptions);
       }
   </script>
 
@@ -50,11 +50,7 @@
       </div>
       
     </nav>
-    <section class="chart">Chart
-      <div id="div1" style="height: 400px; background-color: aliceblue;"></div>
-      <div id="div2" style="height: 400px; background-color: white;"></div>
-      <div id="div3" style="height: 400px; background-color: lightcoral; "></div>
-    </section>
+    <section class="chart">Chart</section>
   </main>
   <footer></footer>
 </body>
