--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
  <title>Women++ Impact Tracker Challenge | Hack'n'Lead</title>
 
  <link rel="stylesheet" href="style.css" />
- <script src="script.js"></script>
   <script src="https://kit.fontawesome.com/473816287a.js" crossorigin="anonymous"></script>
+
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script src="script.js"></script>
+
 
 
 </head>
@@ -31,7 +34,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" height="2.75em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M64 64c0-17.7-14.3-32-32-32S0 46.3 0 64V400c0 44.2 35.8 80 80 80H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H80c-8.8 0-16-7.2-16-16V64zm406.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 210.7l-57.4-57.4c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L240 221.3l57.4 57.4c12.5 12.5 32.8 12.5 45.3 0l128-128z"/></svg>
         <div>Event Insights</div>
       </div>
-      <div class="each-nav" onclick="smoothScroll('insight')">
+      <div class="each-nav" onclick="smoothScroll('impact')">
         <svg xmlns="http://www.w3.org/2000/svg" height="2.7em" viewBox="0 0 576 512">! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc.<path d="M160 0c-17.7 0-32 14.3-32 32s14.3 32 32 32h50.7L9.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L256 109.3V160c0 17.7 14.3 32 32 32s32-14.3 32-32V32c0-17.7-14.3-32-32-32H160zM576 80a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM448 208a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM400 384a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm48 80a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm128 0a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM272 384a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm48 80a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM144 512a48 48 0 1 0 0-96 48 48 0 1 0 0 96zM576 336a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm-48-80a48 48 0 1 0 0-96 48 48 0 1 0 0 96z"/></svg>
         <div>Impact tracking</div>
       </div>
@@ -55,7 +58,11 @@
     </nav>
     <div class="charts-container">
       <section id="event" class="chart">event</section>
-      <section id="insight" class="chart">insight</section>
+      <section id="impact" class="chart">
+        <div id="impact-chart1"></div>
+        <div id="impact-chart2"></div>
+        <div id="impact-chart3"></div>
+      </section>
       <section id="partners" class="chart">partners</section>
       <section id="factors" class="chart">factors</section>
       <section id="report" class="chart">report</section>
