edited 2nd grant

--- a/index.html
+++ b/index.html
@@ -79,12 +79,10 @@
 
 
         <div class="grant-container">
-          <p style="font-weight: bold">INNOSUISSE</p>
+          <p style="font-weight: bold">PROTOTYPE FUND CH</p>
           <p>Grant type: project grants</p>
           <p>Geographic region: Switzerland</p>
-          <p>Your company or private or public institution must operate in Switzerland and engage in value-creating activities.
-            You assume the project costs incurred in your company in the amount of 40–60% of the total project costs. A Swiss research partner must be prepared to implement an innovation project with you.</p>
-    
+          <p>Promotes open technologies by and for civil society. Supports self-employed programmers and interdisciplinary teams like software developers, hackers, data journalists, politicians, activists, scientists, creative people, etc. with work permits in Switzerland. </p>
         </div>
 
      
