--- a/index.html
+++ b/index.html
@@ -130,7 +130,12 @@
           </div>
         </section>
 
-        <section id="report" class="chart">report</section>
+        <section id="report" class="chart">
+          <div>
+            <h2>Seamleassly craft reports</h2>
+            <button>Generate annual report</button>
+          </div>
+        </section>
         <section id="about" class="chart">
           <h3>Women ++</h3>
           <p>
