Change hero text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <header>
-      <h1>WomenPlusPlus Tracker</h1>
+      <h1>Women++ Impact Tracker</h1>
     </header>
     <main>
       <nav class="navigation make-sticky">
